--- a/bekjon/index.html
+++ b/bekjon/index.html
@@ -45,7 +45,7 @@
 
 
             <div class="container-3">
-                <h2 class="text-center">Challenge3: Rock,Paper,Scissors</h2>
+                <h2 class="text-center">Challenge3: Rock,Paper,<br> Scissors</h2>
                 <div class="flexbox-container-3" id="flexbox-container-3">
                     
                         <img id="rock" src="https://www.nicepng.com/png/detail/6-61708_rock-rock-paper-scissors-clipart.png" alt="" onclick="rpsGame(this)">
