--- a/bekjon/index.html
+++ b/bekjon/index.html
@@ -114,9 +114,9 @@
         <div class="flex-blackjack-row-3">
             <table class="text-center" style="border: 1px solid black;">
                 <tr>
-                    <th>Wins(G'alabalar)</th>
-                    <th>Losses(Mag'lubiyatlar)</th>
-                    <th>Draws(Durranglar)</th>
+                    <th>Wins</th>
+                    <th>Losses</th>
+                    <th>Draws</th>
                 </tr>
                 <tr>
                     <td><span id="wins">0</span></td>
