--- a/bekjon/index.html
+++ b/bekjon/index.html
@@ -130,12 +130,13 @@
 
 
 <div class="div">
+ISHPULATOV BEKJON
   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro molestias quae nam nostrum ut sapiente magnam ab error reiciendis animi cumque tempore repudiandae rerum sed sit, a commodi! Sunt, error.
 </div>
 
 
 
-Akobir Usmonov
+
 
 
     <script src="js/bek.js">
